update onto master

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(96 entries)</td>
+<td>(113 entries)</td>
 </tr>
 <tr>
 <td>Library Index</td>
@@ -107,11 +107,11 @@
 <td>V</td>
 <td>W</td>
 <td>X</td>
-<td>Y</td>
+<td><a href="index.html#lemma_Y">Y</a></td>
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(23 entries)</td>
+<td>(40 entries)</td>
 </tr>
 <tr>
 <td>Constructor Index</td>
@@ -175,7 +175,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(15 entries)</td>
+<td>(16 entries)</td>
 </tr>
 <tr>
 <td>Inductive Index</td>
@@ -303,7 +303,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(24 entries)</td>
+<td>(23 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
@@ -345,7 +345,9 @@
 <a href="model.html#action_invocation_eq">action_invocation_eq</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_C"></a><h2>C </h2>
 <a href="model.html#combined_histories">combined_histories</a> [definition, in <a href="model.html">model</a>]<br/>
+<a href="helpers.html#combine_tid_histories_nil">combine_tid_histories_nil</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#commH">commH</a> [projection, in <a href="model.html">model</a>]<br/>
+<a href="helpers.html#commH_state">commH_state</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#Commute">Commute</a> [constructor, in <a href="model.html">model</a>]<br/>
 <a href="model.html#Conflict">Conflict</a> [section, in <a href="model.html">model</a>]<br/>
 <a href="model.html#conflict_free_step">conflict_free_step</a> [definition, in <a href="model.html">model</a>]<br/>
@@ -368,6 +370,13 @@
 <a href="helpers.html#Histories">Histories</a> [section, in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#Histories">Histories</a> [section, in <a href="model.html">model</a>]<br/>
 <a href="model.html#history">history</a> [definition, in <a href="model.html">model</a>]<br/>
+<a href="helpers.html#history_of_thread_sublist">history_of_thread_sublist</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_in_teq">history_of_thread_in_teq</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_nonempty">history_of_thread_nonempty</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_reordered_eq">history_of_thread_reordered_eq</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_end">history_of_thread_end</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_combined_is_application">history_of_thread_combined_is_application</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_app_distributes">history_of_thread_app_distributes</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#history_of_thread_not_nil">history_of_thread_not_nil</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="global_I"></a><h2>I </h2>
 <a href="model.html#Inv">Inv</a> [constructor, in <a href="model.html">model</a>]<br/>
@@ -393,12 +402,18 @@
 <br/><br/><a name="global_R"></a><h2>R </h2>
 <a href="model.html#reordered">reordered</a> [inductive, in <a href="model.html">model</a>]<br/>
 <a href="helpers.html#reordered_Y_prefix_correct">reordered_Y_prefix_correct</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_app_inv_prefix">reordered_app_inv_prefix</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_app_inv_hd">reordered_app_inv_hd</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_cons_inv">reordered_cons_inv</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_app_inv">reordered_app_inv</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_cons_app">reordered_cons_app</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_ind_bis">reordered_ind_bis</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_in">reordered_in</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_prefix">reordered_prefix</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_app_head">reordered_app_head</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_unit">reordered_unit</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_sym">reordered_sym</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_refl">reordered_refl</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_nil">reordered_nil</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reorder_unit_eq">reorder_unit_eq</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reorder_length_eq">reorder_length_eq</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
@@ -414,7 +429,7 @@
 <a href="model.html#ro_perm_nil">ro_perm_nil</a> [constructor, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_S"></a><h2>S </h2>
 <a href="scr.html">scr</a> [library]<br/>
-<a href="model.html#sim_commutes">sim_commutes</a> [definition, in <a href="model.html">model</a>]<br/>
+<a href="model.html#sim_commutes">sim_commutes</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec">spec</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_oracle_correct">spec_oracle_correct</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_oracle">spec_oracle</a> [axiom, in <a href="model.html">model</a>]<br/>
@@ -431,6 +446,7 @@
 <a href="helpers.html#state_with_md_get_state_history">state_with_md_get_state_history</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#state_with_md_comp_eq">state_with_md_comp_eq</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#state_with_md_has_md">state_with_md_has_md</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#state_ycpy_nonempty">state_ycpy_nonempty</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#state_with_md">state_with_md</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#step_writes">step_writes</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#swappable">swappable</a> [definition, in <a href="model.html">model</a>]<br/>
@@ -449,6 +465,7 @@
 <a href="model.html#X_invocations">X_invocations</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_Y"></a><h2>Y </h2>
 <a href="model.html#Y">Y</a> [axiom, in <a href="model.html">model</a>]<br/>
+<a href="helpers.html#y_copy_state">y_copy_state</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#Y_copy">Y_copy</a> [projection, in <a href="model.html">model</a>]<br/>
 <a href="model.html#Y_invocations">Y_invocations</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><hr/>
@@ -462,10 +479,19 @@
 <br/><br/><hr/>
 <h1>Lemma Index</h1>
 <a name="lemma_C"></a><h2>C </h2>
+<a href="helpers.html#combine_tid_histories_nil">combine_tid_histories_nil</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#commH_state">commH_state</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#correct_state_correct_generated_history">correct_state_correct_generated_history</a> [in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="lemma_G"></a><h2>G </h2>
 <a href="helpers.html#generated_history_corresponds_state_history">generated_history_corresponds_state_history</a> [in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="lemma_H"></a><h2>H </h2>
+<a href="helpers.html#history_of_thread_sublist">history_of_thread_sublist</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_in_teq">history_of_thread_in_teq</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_nonempty">history_of_thread_nonempty</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_reordered_eq">history_of_thread_reordered_eq</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_end">history_of_thread_end</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_combined_is_application">history_of_thread_combined_is_application</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#history_of_thread_app_distributes">history_of_thread_app_distributes</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#history_of_thread_not_nil">history_of_thread_not_nil</a> [in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="lemma_I"></a><h2>I </h2>
 <a href="helpers.html#inv_of_action_eq">inv_of_action_eq</a> [in <a href="helpers.html">helpers</a>]<br/>
@@ -473,12 +499,18 @@
 <a href="helpers.html#next_mode_dec">next_mode_dec</a> [in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="lemma_R"></a><h2>R </h2>
 <a href="helpers.html#reordered_Y_prefix_correct">reordered_Y_prefix_correct</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_app_inv_prefix">reordered_app_inv_prefix</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_app_inv_hd">reordered_app_inv_hd</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_cons_inv">reordered_cons_inv</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_app_inv">reordered_app_inv</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_cons_app">reordered_cons_app</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_ind_bis">reordered_ind_bis</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_in">reordered_in</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_prefix">reordered_prefix</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_app_head">reordered_app_head</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_unit">reordered_unit</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_sym">reordered_sym</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#reordered_refl">reordered_refl</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reordered_nil">reordered_nil</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reorder_unit_eq">reorder_unit_eq</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#reorder_length_eq">reorder_length_eq</a> [in <a href="helpers.html">helpers</a>]<br/>
@@ -490,7 +522,10 @@
 <a href="helpers.html#state_with_md_get_state_history">state_with_md_get_state_history</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#state_with_md_comp_eq">state_with_md_comp_eq</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#state_with_md_has_md">state_with_md_has_md</a> [in <a href="helpers.html">helpers</a>]<br/>
+<a href="helpers.html#state_ycpy_nonempty">state_ycpy_nonempty</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#swappable_sym">swappable_sym</a> [in <a href="helpers.html">helpers</a>]<br/>
+<br/><br/><a name="lemma_Y"></a><h2>Y </h2>
+<a href="helpers.html#y_copy_state">y_copy_state</a> [in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><hr/>
 <h1>Constructor Index</h1>
 <a name="constructor_C"></a><h2>C </h2>
@@ -520,6 +555,7 @@
 <br/><br/><a name="axiom_N"></a><h2>N </h2>
 <a href="model.html#num_threads">num_threads</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="axiom_S"></a><h2>S </h2>
+<a href="model.html#sim_commutes">sim_commutes</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec">spec</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_oracle_correct">spec_oracle_correct</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_oracle">spec_oracle</a> [in <a href="model.html">model</a>]<br/>
@@ -596,7 +632,6 @@
 <br/><br/><a name="definition_R"></a><h2>R </h2>
 <a href="model.html#response_eq">response_eq</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="definition_S"></a><h2>S </h2>
-<a href="model.html#sim_commutes">sim_commutes</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#start_state">start_state</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#start_mode">start_mode</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#state_with_md">state_with_md</a> [in <a href="model.html">model</a>]<br/>
@@ -646,7 +681,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(96 entries)</td>
+<td>(113 entries)</td>
 </tr>
 <tr>
 <td>Library Index</td>
@@ -706,11 +741,11 @@
 <td>V</td>
 <td>W</td>
 <td>X</td>
-<td>Y</td>
+<td><a href="index.html#lemma_Y">Y</a></td>
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(23 entries)</td>
+<td>(40 entries)</td>
 </tr>
 <tr>
 <td>Constructor Index</td>
@@ -774,7 +809,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(15 entries)</td>
+<td>(16 entries)</td>
 </tr>
 <tr>
 <td>Inductive Index</td>
@@ -902,7 +937,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(24 entries)</td>
+<td>(23 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
