--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <td>B</td>
 <td><a href="index.html#global_C">C</a></td>
 <td><a href="index.html#global_D">D</a></td>
-<td><a href="index.html#global_E">E</a></td>
+<td>E</td>
 <td>F</td>
 <td><a href="index.html#global_G">G</a></td>
 <td><a href="index.html#global_H">H</a></td>
@@ -47,7 +47,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(118 entries)</td>
+<td>(115 entries)</td>
 </tr>
 <tr>
 <td>Library Index</td>
@@ -161,7 +161,7 @@
 <td>L</td>
 <td><a href="index.html#axiom_M">M</a></td>
 <td><a href="index.html#axiom_N">N</a></td>
-<td>O</td>
+<td><a href="index.html#axiom_O">O</a></td>
 <td>P</td>
 <td>Q</td>
 <td>R</td>
@@ -247,7 +247,7 @@
 <td>B</td>
 <td><a href="index.html#section_C">C</a></td>
 <td>D</td>
-<td><a href="index.html#section_E">E</a></td>
+<td>E</td>
 <td>F</td>
 <td>G</td>
 <td><a href="index.html#section_H">H</a></td>
@@ -279,7 +279,7 @@
 <td>B</td>
 <td><a href="index.html#definition_C">C</a></td>
 <td>D</td>
-<td><a href="index.html#definition_E">E</a></td>
+<td>E</td>
 <td>F</td>
 <td><a href="index.html#definition_G">G</a></td>
 <td><a href="index.html#definition_H">H</a></td>
@@ -287,7 +287,7 @@
 <td>J</td>
 <td>K</td>
 <td>L</td>
-<td>M</td>
+<td><a href="index.html#definition_M">M</a></td>
 <td><a href="index.html#definition_N">N</a></td>
 <td>O</td>
 <td>P</td>
@@ -298,12 +298,12 @@
 <td>U</td>
 <td>V</td>
 <td><a href="index.html#definition_W">W</a></td>
-<td><a href="index.html#definition_X">X</a></td>
-<td><a href="index.html#definition_Y">Y</a></td>
+<td>X</td>
+<td>Y</td>
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(26 entries)</td>
+<td>(23 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
@@ -359,9 +359,6 @@
 <br/><br/><a name="global_D"></a><h2>D </h2>
 <a href="helpers.html#during_commute_state">during_commute_state</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#during_replay_state">during_replay_state</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
-<br/><br/><a name="global_E"></a><h2>E </h2>
-<a href="model.html#Emulator">Emulator</a> [section, in <a href="model.html">model</a>]<br/>
-<a href="model.html#emulator_act">emulator_act</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_G"></a><h2>G </h2>
 <a href="model.html#GenCons">GenCons</a> [constructor, in <a href="model.html">model</a>]<br/>
 <a href="model.html#generated">generated</a> [inductive, in <a href="model.html">model</a>]<br/>
@@ -396,7 +393,9 @@
 <a href="helpers.html#in_history_of_thread">in_history_of_thread</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="helpers.html#IsHistories">IsHistories</a> [definition, in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="global_M"></a><h2>M </h2>
+<a href="model.html#Machine">Machine</a> [section, in <a href="model.html">model</a>]<br/>
 <a href="model.html#MachineState">MachineState</a> [section, in <a href="model.html">model</a>]<br/>
+<a href="model.html#machine_act">machine_act</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#max_response_number">max_response_number</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#md">md</a> [projection, in <a href="model.html">model</a>]<br/>
 <a href="helpers.html#Misc">Misc</a> [section, in <a href="helpers.html">helpers</a>]<br/>
@@ -415,6 +414,8 @@
 <br/><br/><a name="global_O"></a><h2>O </h2>
 <a href="model.html#Oracle">Oracle</a> [constructor, in <a href="model.html">model</a>]<br/>
 <a href="helpers.html#oracle_response_state">oracle_response_state</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
+<a href="model.html#oracle_response_correct">oracle_response_correct</a> [axiom, in <a href="model.html">model</a>]<br/>
+<a href="model.html#oracle_response">oracle_response</a> [axiom, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_P"></a><h2>P </h2>
 <a href="model.html#postH">postH</a> [projection, in <a href="model.html">model</a>]<br/>
 <a href="model.html#preH">preH</a> [projection, in <a href="model.html">model</a>]<br/>
@@ -438,8 +439,6 @@
 <a href="scr.html">scr</a> [library]<br/>
 <a href="model.html#sim_commutes">sim_commutes</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec">spec</a> [axiom, in <a href="model.html">model</a>]<br/>
-<a href="model.html#spec_oracle_correct">spec_oracle_correct</a> [axiom, in <a href="model.html">model</a>]<br/>
-<a href="model.html#spec_oracle">spec_oracle</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_resp_exists">spec_resp_exists</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_responses">spec_responses</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_last_inv">spec_last_inv</a> [axiom, in <a href="model.html">model</a>]<br/>
@@ -458,7 +457,6 @@
 <a href="model.html#state_with_md">state_with_md</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#step_writes">step_writes</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_T"></a><h2>T </h2>
-<a href="model.html#termination">termination</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#thread_of_action">thread_of_action</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#tid">tid</a> [definition, in <a href="model.html">model</a>]<br/>
 <a href="model.html#tid_le_num_threads">tid_le_num_threads</a> [axiom, in <a href="model.html">model</a>]<br/>
@@ -469,12 +467,10 @@
 <a href="model.html#X_copy">X_copy</a> [projection, in <a href="model.html">model</a>]<br/>
 <a href="model.html#X_and_Y_wf">X_and_Y_wf</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="model.html#X_and_Y_in_spec">X_and_Y_in_spec</a> [axiom, in <a href="model.html">model</a>]<br/>
-<a href="model.html#X_invocations">X_invocations</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="global_Y"></a><h2>Y </h2>
 <a href="model.html#Y">Y</a> [axiom, in <a href="model.html">model</a>]<br/>
 <a href="helpers.html#y_copy_state">y_copy_state</a> [lemma, in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#Y_copy">Y_copy</a> [projection, in <a href="model.html">model</a>]<br/>
-<a href="model.html#Y_invocations">Y_invocations</a> [definition, in <a href="model.html">model</a>]<br/>
 <br/><br/><hr/>
 <h1>Library Index</h1>
 <a name="library_H"></a><h2>H </h2>
@@ -567,11 +563,12 @@
 <a href="model.html#max_response_number">max_response_number</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="axiom_N"></a><h2>N </h2>
 <a href="model.html#num_threads">num_threads</a> [in <a href="model.html">model</a>]<br/>
+<br/><br/><a name="axiom_O"></a><h2>O </h2>
+<a href="model.html#oracle_response_correct">oracle_response_correct</a> [in <a href="model.html">model</a>]<br/>
+<a href="model.html#oracle_response">oracle_response</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="axiom_S"></a><h2>S </h2>
 <a href="model.html#sim_commutes">sim_commutes</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec">spec</a> [in <a href="model.html">model</a>]<br/>
-<a href="model.html#spec_oracle_correct">spec_oracle_correct</a> [in <a href="model.html">model</a>]<br/>
-<a href="model.html#spec_oracle">spec_oracle</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_resp_exists">spec_resp_exists</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_responses">spec_responses</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#spec_last_inv">spec_last_inv</a> [in <a href="model.html">model</a>]<br/>
@@ -612,12 +609,11 @@
 <h1>Section Index</h1>
 <a name="section_C"></a><h2>C </h2>
 <a href="model.html#Conflict">Conflict</a> [in <a href="model.html">model</a>]<br/>
-<br/><br/><a name="section_E"></a><h2>E </h2>
-<a href="model.html#Emulator">Emulator</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="section_H"></a><h2>H </h2>
 <a href="helpers.html#Histories">Histories</a> [in <a href="helpers.html">helpers</a>]<br/>
 <a href="model.html#Histories">Histories</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="section_M"></a><h2>M </h2>
+<a href="model.html#Machine">Machine</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#MachineState">MachineState</a> [in <a href="model.html">model</a>]<br/>
 <a href="helpers.html#Misc">Misc</a> [in <a href="helpers.html">helpers</a>]<br/>
 <br/><br/><a name="section_S"></a><h2>S </h2>
@@ -630,8 +626,6 @@
 <br/><br/><a name="definition_C"></a><h2>C </h2>
 <a href="model.html#combined_histories">combined_histories</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#conflict_free_step">conflict_free_step</a> [in <a href="model.html">model</a>]<br/>
-<br/><br/><a name="definition_E"></a><h2>E </h2>
-<a href="model.html#emulator_act">emulator_act</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="definition_G"></a><h2>G </h2>
 <a href="model.html#get_replay_response">get_replay_response</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#get_commute_response">get_commute_response</a> [in <a href="model.html">model</a>]<br/>
@@ -642,6 +636,8 @@
 <br/><br/><a name="definition_I"></a><h2>I </h2>
 <a href="model.html#invocation_eq">invocation_eq</a> [in <a href="model.html">model</a>]<br/>
 <a href="helpers.html#IsHistories">IsHistories</a> [in <a href="helpers.html">helpers</a>]<br/>
+<br/><br/><a name="definition_M"></a><h2>M </h2>
+<a href="model.html#machine_act">machine_act</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="definition_N"></a><h2>N </h2>
 <a href="model.html#next_mode">next_mode</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="definition_R"></a><h2>R </h2>
@@ -654,15 +650,10 @@
 <a href="model.html#state_with_md">state_with_md</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#step_writes">step_writes</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="definition_T"></a><h2>T </h2>
-<a href="model.html#termination">termination</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#thread_of_action">thread_of_action</a> [in <a href="model.html">model</a>]<br/>
 <a href="model.html#tid">tid</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><a name="definition_W"></a><h2>W </h2>
 <a href="model.html#write_tid_set">write_tid_set</a> [in <a href="model.html">model</a>]<br/>
-<br/><br/><a name="definition_X"></a><h2>X </h2>
-<a href="model.html#X_invocations">X_invocations</a> [in <a href="model.html">model</a>]<br/>
-<br/><br/><a name="definition_Y"></a><h2>Y </h2>
-<a href="model.html#Y_invocations">Y_invocations</a> [in <a href="model.html">model</a>]<br/>
 <br/><br/><hr/>
 <h1>Record Index</h1>
 <a name="record_S"></a><h2>S </h2>
@@ -674,7 +665,7 @@
 <td>B</td>
 <td><a href="index.html#global_C">C</a></td>
 <td><a href="index.html#global_D">D</a></td>
-<td><a href="index.html#global_E">E</a></td>
+<td>E</td>
 <td>F</td>
 <td><a href="index.html#global_G">G</a></td>
 <td><a href="index.html#global_H">H</a></td>
@@ -698,7 +689,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(118 entries)</td>
+<td>(115 entries)</td>
 </tr>
 <tr>
 <td>Library Index</td>
@@ -812,7 +803,7 @@
 <td>L</td>
 <td><a href="index.html#axiom_M">M</a></td>
 <td><a href="index.html#axiom_N">N</a></td>
-<td>O</td>
+<td><a href="index.html#axiom_O">O</a></td>
 <td>P</td>
 <td>Q</td>
 <td>R</td>
@@ -898,7 +889,7 @@
 <td>B</td>
 <td><a href="index.html#section_C">C</a></td>
 <td>D</td>
-<td><a href="index.html#section_E">E</a></td>
+<td>E</td>
 <td>F</td>
 <td>G</td>
 <td><a href="index.html#section_H">H</a></td>
@@ -930,7 +921,7 @@
 <td>B</td>
 <td><a href="index.html#definition_C">C</a></td>
 <td>D</td>
-<td><a href="index.html#definition_E">E</a></td>
+<td>E</td>
 <td>F</td>
 <td><a href="index.html#definition_G">G</a></td>
 <td><a href="index.html#definition_H">H</a></td>
@@ -938,7 +929,7 @@
 <td>J</td>
 <td>K</td>
 <td>L</td>
-<td>M</td>
+<td><a href="index.html#definition_M">M</a></td>
 <td><a href="index.html#definition_N">N</a></td>
 <td>O</td>
 <td>P</td>
@@ -949,12 +940,12 @@
 <td>U</td>
 <td>V</td>
 <td><a href="index.html#definition_W">W</a></td>
-<td><a href="index.html#definition_X">X</a></td>
-<td><a href="index.html#definition_Y">Y</a></td>
+<td>X</td>
+<td>Y</td>
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(26 entries)</td>
+<td>(23 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
